# stonex-cms-amqp-test-framework

./: .gitignore  CMakeLists.txt  ChangeLog.txt  NOTICE  README.md  conanfile.py
Test/: CMakeLists.txt  main.cpp  mock_messages_counting_decorating_test.txt  mock_messages_counting_test.txt  mock_messages_decorating_test.txt  mock_messages_test.txt  test_case_all.config  test_case_all_protobuf - Copy.config  test_case_all_protobuf.config  test_case_all_senders.config  test_message_file1.txt  test_message_file2.txt  test_message_file3.txt  test_message_file4.txt
protobuf-messages/: CMakeLists.txt
protobuf-messages/Test/: CMakeLists.txt  main.cpp
protobuf-messages/messages/: mock_message.pb.cc  mock_message.pb.h
protobuf-messages/protobuf/: mock_message.pb.cc
protobuf-messages/schemas/: mock_message.proto
stonex-cms-amqp-test-framework-lib/include/Configuration/: ConfigurationParser.h  MessageReceiverConfiguration.h  MessageSenderConfiguration.h
stonex-cms-amqp-test-framework-lib/include/MessageDecorator/: ApplicationPropertyDecorator.h  CMSDestinationDecorator.h  CMSMessageDecorator.h  CMSPropertyDecorator.h  MessageDecoratorFactory.h
stonex-cms-amqp-test-framework-lib/include/MessageListener/: VeryfingMessageListener.h  VeryfingMessageListenerFactory.h
stonex-cms-amqp-test-framework-lib/include/MessageReceiver/: PrintingMessageReceiver.h  ProtobufMessageCountingDecoratingFileReceiver.h  ProtobufMessageCountingDecoratingReceiver.h  ProtobufMessageCountingFileReceiver.h  ProtobufMessageCountingReceiver.h  ProtobufMessageDecoratingFileReceiver.h  ProtobufMessageDecoratingReceiver.h  ProtobufMessageFileReceiver.h  ProtobufMessageReceiver.h  TestMessageReceiverFactory.h  VeryfyingMessageReceiver.h
stonex-cms-amqp-test-framework-lib/include/MessageSender/: MessageSenderWithSource.h  MessageSenderWithSourceFactory.h  MockMessageCountingDecoratingSender.h  MockMessageCountingSender.h  MockMessageDecoratingSender.h  MockMessageSender.h  MockProtobufMessageCountingDecoratingFileSender.h  MockProtobufMessageCountingDecoratingSender.h  MockProtobufMessageCountingFileSender.h  MockProtobufMessageCountingSender.h  MockProtobufMessageDecoratingFileSender.h  MockProtobufMessageDecoratingSender.h  MockProtobufMessageFileSender.h  MockProtobufMessageSender.h  TestMessageSenderFactory.h
stonex-cms-amqp-test-framework-lib/include/Messages/: MockMessage.h
stonex-cms-amqp-test-framework-lib/include/Metrics/: MessageCounter.h  Metrics.h  SizeChecker.h
stonex-cms-amqp-test-framework-lib/include/VerifierFactory/: CompoundTestVerifier.h  CompoundVerifierFactory.h
stonex-cms-amqp-test-framework-lib/include/VerifyingReceiverFactory/: VerifyingReceiverFactory.h
stonex-cms-amqp-test-framework-lib/src/Configuration/: ConfigurationParser.cpp  MessageReceiverConfiguration.cpp  MessageSenderConfiguration.cpp
stonex-cms-amqp-test-framework-lib/src/MessageDecorator/: ApplicationPropertyDecorator.cpp  CMSDestinationDecorator.cpp  CMSMessageDecorator.cpp  CMSPropertyDecorator.cpp  MessageDecoratorFactory.cpp
stonex-cms-amqp-test-framework-lib/src/MessageListener/: VeryfingMessageListener.cpp  VeryfingMessageListenerFactory.cpp
stonex-cms-amqp-test-framework-lib/src/MessageReceiver/: PrintingMessageReceiver.cpp  TestMessageReceiverFactory.cpp  VeryfyingMessageReceiver.cpp
stonex-cms-amqp-test-framework-lib/src/MessageSender/: MessageSenderWithSource.cpp  MessageSenderWithSourceFactory.cpp  MockMessageCountingDecoratingSender.cpp  MockMessageCountingSender.cpp  MockMessageDecoratingSender.cpp  MockMessageSender.cpp  MockProtobufMessageCountingDecoratingSender.cpp  MockProtobufMessageCountingSender.cpp  MockProtobufMessageDecoratingSender.cpp  MockProtobufMessageSender.cpp  TestMessageSenderFactory.cpp
stonex-cms-amqp-test-framework-lib/src/Messages/: MockMessage.cpp
stonex-cms-amqp-test-framework-lib/src/Metrics/: MessageCounter.cpp  Metrics.cpp  SizeChecker.cpp
stonex-cms-amqp-test-framework-lib/src/VerifierFactory/: CompoundTestVerifier.cpp  CompoundVerifierFactory.cpp
stonex-cms-amqp-test-framework-lib/src/VerifyingReceiverFactory/: VerifyingReceiverFactory.cpp
